objects/copado__Deployment_Flow__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all Branch Management features will be enabled in the Deployment Flow.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Auto_Resolve_Options__c</fullName>
        <defaultValue>&quot;All files&quot;</defaultValue>
        <description>If a git merge conflict occurs and some files are excepted from the Auto Resolve conflict feature, the promotion will be stopped and you will be able to resolve conflicts manually using the Copado interface.</description>
        <inlineHelpText>If a git merge conflict occurs and some files are excepted from the Auto Resolve conflict feature, the promotion will be stopped and you will be able to resolve conflicts manually using the Copado interface.</inlineHelpText>
        <label>Auto Resolve Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Block_Commits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, committing changes on user stories linked to this deployment flow will not be allowed.</description>
        <inlineHelpText>If checked, committing changes on user stories linked to this deployment flow will not be allowed.</inlineHelpText>
        <label>Block Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch_Management_Coordinates__c</fullName>
        <description>This field is used to store the Branch Management Step locations of each box. This field should not be added to the page layout.</description>
        <label>Branch Management Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Copado_DX_Mode__c</fullName>
        <inlineHelpText>Selected DX mode will determine scratch metadata sources.</inlineHelpText>
        <label>Copado DX Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Git Artifacts</fullName>
                </value>
                <value>
                    <fullName>Package Artifacts</fullName>
                </value>
                <value>
                    <fullName>Branches</fullName>
                </value>
                <value>
                    <fullName>Org Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Disable_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Deployment Flow Steps best practices validations will be disabled.</description>
        <label>Disable Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Enable_Copado_DX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Copado DX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Equal_Branch_Environment_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Environment names must equal their corresponding Branches in the Deployment Flow Steps.</description>
        <label>Enforce branch/env naming convention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_Auto_Resolve__c</fullName>
        <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
        <inlineHelpText>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</inlineHelpText>
        <label>Exclude From Auto Resolve</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Auto_Resolve_Exceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Flow_Step_Coordinates__c</fullName>
        <description>This field is used to store the Deployment Flow Step locations of each box. This field should not be added to the page layout.</description>
        <label>Flow Step Coordinates</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Git Repository linked to the Deployment Flow. All branches of the Deployment Flow Steps must exist in this Git Repository.</description>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Deployment Flows</relationshipLabel>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Main_Branch__c</fullName>
        <description>Main branch of the selected Git Repository (e.g. master).</description>
        <label>Main Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Manage_Branches__c</fullName>
        <description>Link to open the Branch Management application for the Deployment Flow.</description>
        <formula>HYPERLINK(&apos;/apex/&apos;&amp;
IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,
  IF(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)
)&amp;&apos;BranchManagement?id=&apos;&amp;Id, &apos;Manage Branches&apos;, &apos;_blank&apos;)</formula>
        <label>Manage Branches</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</description>
        <label>Static Code Analysis Settings</label>
        <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipLabel>Deployment Flows</relationshipLabel>
        <relationshipName>Deployment_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Flow</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Active__c</columns>
        <columns>copado__Manage_Branches__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Main_Branch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Deployment Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>